# cv-maker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
app/: main.py
app/api/v1/: cv.py  index.py
app/core/: config.py  exceptions.py  factories.py  index_manager.py  logger.py  web_scraper.py
app/models/: index.py
app/services/: __init__.py  index_manager.py
app/services/workflow/: __init__.py  context.py  extraction_models.py  latex_generator.py  prompts.py
docs/: web_scraper.md
scripts/: draw_cv_workflow.py  setup_playwright.py
src/: config.py  logger.py
src/api/v1/: cv.py  index.py  schemas.py
src/core/: config.py  exceptions.py  index_manager.py  web_scraper.py
src/cv_maker/: custom_events.py  latex_generator.py  models.py  services.py  web_scraper.py  workflow.py
src/cv_maker/workflow/: __init__.py  custom_events.py  latex_generator.py  prompts.py
src/models/: cv.py
src/services/: __init__.py
src/services/workflow/: __init__.py  custom_events.py  extraction_models.py  latex_generator.py  prompts.py
tests/: conftest.py  test_api_endpoints.py  test_events.py  test_latex_generator.py  test_models.py  test_services.py  test_web_scraper.py  test_workflow_integration.py  test_workflow_steps.py
tests/integration/: __init__.py  test_vector_index_manager.py
tests/integration/sample_files/: test_file.md
tests/unit/: test_config.py
