[project]
name = "cv-maker"
version = "0.1.0"
description = "AI Agentic Workflow to build a CV"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-multipart>=0.0.9",
    "ipykernel>=6.30.1",
    "llama-index-core>=0.14.2",
    "llama-index-embeddings-google-genai>=0.3.0",
    "llama-index-llms-google-genai>=0.3.0",
    "llama-index-readers-llama-parse>=0.5.1",
    "llama-parse>=0.6.69",
    "playwright>=1.55.0",
    "pylatex>=1.4.2",
    "python-dotenv>=1.1.1",
    "fastapi[standard]>=0.118.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[dependency-groups]
dev = ["pytest>=8.4.2"]
