[project]
name = "cv-maker"
version = "0.4.0"
description = "AI Agentic Workflow to build a CV"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-multipart>=0.0.9",
    "ipykernel>=6.30.1",
    "llama-index-core>=0.14.2",
    "llama-index-embeddings-google-genai>=0.3.0",
    "llama-index-llms-google-genai>=0.3.0",
    "llama-index-readers-llama-parse>=0.5.1",
    "llama-parse>=0.6.69",
    "playwright>=1.55.0",
    "pylatex>=1.4.2",
    "python-dotenv>=1.1.1",
    "fastapi[standard]>=0.118.0",
    "redis[hiredis]>=6.4.0",
    "pydantic-settings>=2.11.0",
    "llama-index-vector-stores-qdrant>=0.8.6",
    "llama-index-readers-file>=0.5.4",
]

[dependency-groups]
dev = [
    "llama-index-utils-workflow>=0.4.1",
    "taskipy>=1.14.1",
    "pytest>=8.3.0",
    "pytest-env>=1.1.5",
    "pytest-asyncio>=1.2.0",
]

[tool.taskipy.tasks]
start = "python -m fastapi run app/main.py"
dev = "python -m fastapi dev app/main.py"
build = "docker-compose build"
docker_dev = "docker-compose -f docker-compose.dev.yml up"
docker_run = "docker-compose -f docker-compose.yml up"
docker_down = "docker-compose down --remove-orphans"
test = "pytest tests/ -v"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
